<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iris_description</name>
  <version>1.0.0</version>
  <description>Package provides a URDF model for use with ROS2</description>
  <maintainer email="amamanisai@unsa.edu.pe">Alfredo</maintainer>
  <license>GPL-3.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>ros2launch</exec_depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
